--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=portfolio_db
 EMAIL_USER=adilraees971@gmail.com
-EMAIL_PASS=dftx ircb iefe qzzb
+EMAIL_PASS=ivjk bfvb gasx atni
 RECEIVER_EMAIL=adilraees971@gmail.com
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
